# prompt-library

./: .editorconfig  .gitignore  .gitmodules  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  MANIFEST.in  README.md  SIMPLE_SETUP.md  WINDSURF_SETUP.md  jest.config.js  package.json  prompt-tags.json  pyproject.toml  test_prompt.py  test_simple.py  tsconfig.json
.github/ISSUE_TEMPLATE/: new_prompt.yml  new_prompt_suggestion.yml
.windsurf/: rules.md
cli/: spryker-changelog-helper-mcp.js
ide_setup/: claude-code-setup.md  cursor-setup.md  phpstorm-setup.md  vscode-setup.md  windsurf-setup.md
ide_setup/images/: 1d7088d1-83ee-4c32-9a3e-fff0879c98c2.avif
mcp/: .eslintrc.js  .gitignore  README.md  jest.config.js  package-lock.json  package.json
mcp/src/: cli.ts  index.ts  prompt-loader.ts  server.ts  types.ts
prompt_mcp/: README.md  __init__.py  __main__.py  prompt_loader.py  semantic_search.py  server.py
prompts/ai-coding-assistants/: add-module-dependecy.md  cypress-test-generator.md  filter-for-gui-table.md  plugin-introduction-with-context.md  prepare-for-release.prompt.md  propel-schema-generator.md  specific-refactoring-instructions.md  spryker-data-import-generator.md  spryker-feature-glue-api-generation.md  spryker-new-module-generator.md  ssp-data-import-generator.md  symfony-form-generator.md  test-handover.md  translation-key-generator.md  unit-test-with-data-providers.md
prompts/code-review/: comprehensive-diff-review.md
prompts/context/: spryker-architecture-guide-api.md  spryker-architecture-guide-coding.md  spryker-architecture-guide-majors.md
prompts/template/: prompt-template.md
prompts/templates/: prompt-template.md
prompts/testing/: functional-test-with-rules.md  functional-test-without-rules.md  project-cypress-tests-generator.md  tf-integration-tests-generator.md  tf-unit-tests-generator.md
rules/RFC/: Cypress_Boilerplate_Development_Rules.md  Cypress_Development_Rules_for_Projects.md  Demo_Development_Rules.md  (+3 more)
scripts/: generate-tags.sh  setup-project.sh
spryker-changelog-helper-mcp/: .gitignore  .npmignore  package-lock.json  package.json  spryker-changelog.js  tsconfig.json
tools_setup/: claude-code-setup.md  cursor-setup.md  phpstorm-setup.md  vscode-setup.md  windsurf-setup.md
(+87 files in other folders)
