[project]
name = "prompt-library"
version = "0.1.0"
description = "A library and server for semantic prompt discovery and AI assistant integration. Provides a semantic search server for prompt templates, tag-based prompt mapping, and easy integration with AI coding tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12.0",
    "sentence-transformers",
]
authors = [
    { name = "Spryker AI Team", email = "vitalii.shveider@spryker.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["prompt", "semantic search", "AI", "MCP", "assistant", "template", "server"]

[tool.setuptools]
packages = ["prompt_mcp"]

[project.scripts]
prompt-mcp = "prompt_mcp:main"
