[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-library"
version = "0.1.0"
description = "A library and server for semantic prompt discovery and AI assistant integration. Provides a semantic search server for prompt templates, tag-based prompt mapping, and easy integration with AI coding tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.12.0",
    "python-frontmatter>=1.1.0"
]
authors = [
    { name = "Spryker AI Team", email = "vitalii.shveider@spryker.com" },
]
# Fixed license format (modern SPDX expression)
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["prompt", "semantic search", "AI", "MCP", "assistant", "template", "server"]

[project.scripts]
prompt-mcp = "prompt_mcp:main"

[tool.setuptools]
# Find packages automatically
packages = { find = {} }
# Include package data from MANIFEST.in
include-package-data = true

[dependency-groups]
dev = [
    "build>=1.3.0",
]
